# OpusTrainer

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt  run-tests.sh  shuffle.py  test.py  train_config.yml  trainer.py
.github/workflows/: benchmark.yaml  release.yaml
contrib/: benchmark.py  test_enzh_config.yml  test_enzh_config_plain.yml  test_enzh_noise_config.yml  test_enzh_noise_modifier_config.yml  test_enzh_tags_advanced_config.yml  test_enzh_tags_stage_config.yml  test_full_config.yml  test_zhen_config.yml  test_zhen_prefix_config.yml  train_config.yml
contrib/test-data/: clean.enzh.10  clean.enzh.ref.06.4.none  clean.enzh.ref.06.4.trg  clean.zhen.10  clean.zhen.ref.06.4.04.04.src  clean.zhen.ref.06.4.src  test_enzh_config.expected.out  test_enzh_noise_modifier_config.expected  test_enzh_tags_advanced_config.expected.out  test_enzh_tags_stage_config.expected.out  test_zhen_config.expected.out  test_zhen_config_prefix.expected.out  vocab.zhen.spm
dev/bench/: data.js
raul_config/: README.md  runme.sh  test_enzh_config.yml
src/opustrainer/: __main__.py  alignments.py  logger.py  shuffle.py  tokenizers.py  trainer.py  types.py
src/opustrainer/modifiers/: __init__.py  merge.py  noise.py  placeholders.py  pool.py  prefix.py  retokenize.py  surface.py  typos.py
tests/: test_config.yml  test_endtoend.py  test_logger.py  test_merge.py  test_noise.py  test_placeholders.py  test_placholders.py  test_prefixes.py  test_retokenizer.py  test_tokenizers.py  test_trainer.py  test_trainer_cli.py  test_typos.py
